# sysgen

./: Cargo.toml  README.md
.github/workflows/: ci.yml  claude.yml
crates/sysgen/: Cargo.toml
crates/sysgen-macros/: Cargo.toml
crates/sysgen-macros/src/: lib.rs
crates/sysgen-macros/tests/: macros_test.rs
crates/sysgen-macros/tests/cases/: implements_basic.rs  implements_invalid_attr.rs  implements_invalid_attr.stderr  implements_multi.rs  verifies_test_fn.rs
crates/sysgen-trace/: Cargo.toml
crates/sysgen-trace/src/: collector.rs  main.rs  report.rs
crates/sysgen/src/: cli.rs  lib.rs  main.rs
crates/sysgen/src/agent/: builder.rs  loop_.rs  mod.rs  monitor.rs  prompt.rs
crates/sysgen/src/commands/: check.rs  gen.rs  init.rs  mod.rs  watch.rs
crates/sysgen/src/freeze/: guard.rs
crates/sysgen/src/parser/: manifest.rs  mod.rs  workspace.rs
crates/sysgen/src/traceability/: report.rs
crates/sysgen/src/validation/: cargo.rs  feedback.rs  mod.rs
crates/sysgen/tests/: cargo_integration.rs  syster_integration.rs
crates/sysgen/tests/fixtures/: vehicle.sysml
spec/: example.sysml
