[package]
name = "sysgen-trace"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cargo-sysgen-trace"
path = "src/main.rs"

[dependencies]
sysgen      = { path = "../sysgen" }
anyhow      = { workspace = true }
serde_json  = { workspace = true }
clap        = { workspace = true }

[dev-dependencies]
tempfile = "3"
